
=== Removed

* [manager-api-rest]: Removed obsolete Qmino API documentation generator. I would like to thank the Qmino team for their support over the years. By https://github.com/msavy[Marc Savy (@msavy)^].

=== Fixed

* fix[gateway-engine-es]: throw ClientNotFoundException if client not found when unregistering. By https://github.com/fvolk[Florian Volk (@fvolk)^].

* [manager-api]: Perform unregister only if client is in correct state. By https://github.com/fvolk[Florian Volk (@fvolk)^].

**Full Changelog**: link:https://github.com/apiman/apiman/compare/3.0.0.Final...3.1.0-SNAPSHOT[3.0.0.Final...3.1.0-SNAPSHOT]
// end::3.1.0.Final[]

// tag::3.0.0.Final[]
== 3.0.0.Final

=== Thanks

A huge thanks to every company that has worked with https://www.github.com/msavy[Apiman's main developer] via consulting, support, sponsoring features, or other means. Without financial support, Apiman open source will not continue to be developed.

Particular thanks go to the team at https://www.scheer-pas.com[Scheer PAS^] who sponsored a considerable amount of the work that is in the 3.0.0.Final release.

=== Added

* [manager-api] **Events**: versioned events are now emitted inside Apiman for a number of important business actions. These are consumed internally within Apiman, but are also inserted into a **https://microservices.io/patterns/data/transactional-outbox.html[transactional outbox^]** inside the database using the https://cloudevents.io/[CloudEvents format^]. You can use CDC software, such as https://debezium.io/[Debezium^] to integrate Apiman's events into your messaging platform of choice, such as Apache Kafka. A wide variety of rich business functionality can be enabled via this integration. By https://github.com/msavy[Marc Savy (@msavy)^].

