@@ -25,6 +25,8 @@ All notable changes to Apiman will be documented here (as of Apiman 3).
 
 === Fixed
 
+* fix[ui]: move validation function for IP list into validate function to ensure list valid when switching between IP policies. By https://github.com/fvolk[Florian Volk (@fvolk)^].
+
 * fix[gateway-engine-es]: throw ClientNotFoundException if client not found when unregistering. By https://github.com/fvolk[Florian Volk (@fvolk)^].
 
 * [manager-api]: Perform unregister only if client is in correct state. By https://github.com/fvolk[Florian Volk (@fvolk)^].
